Adding tutorial entries for HttpClient GET, POST, async and authentication